tests/sketchy_null_check/sketchy_null_check.exp
Error --------------------------------------------------------------------------------------------------- cycle_C.js:4:7

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   cycle_C.js:4:7
   4|   if (x); /* sketchy because of uses */
            ^

References:
   cycle_C.js:3:15
   3| function f(x: number | void) {
                    ^^^^^^ [1]
   cycle_C.js:3:24
   3| function f(x: number | void) {
                             ^^^^ [2]


Error -------------------------------------------------------------------------------------------------- cycle_C.js:7:25

Cannot call `f` with `null` bound to `x` because null [1] is incompatible with undefined [2]. [incompatible-call]

   cycle_C.js:7:25
   7| const resNull: void = f(null);
                              ^^^^ [1]

References:
   cycle_C.js:3:24
   3| function f(x: number | void) {
                             ^^^^ [2]


Error ------------------------------------------------------------------------------------------------------- new.js:7:9

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   new.js:7:9
   7|     if (x) {}
              ^

References:
   new.js:6:15
   6| function f<X: number>(x: ?X, t: ?T, s: ?S) {
                    ^^^^^^ [1]
   new.js:6:26
   6| function f<X: number>(x: ?X, t: ?T, s: ?S) {
                               ^^ [2]


Error ------------------------------------------------------------------------------------------------------ new.js:8:14

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   new.js:8:14
   8|     else if (t) { }
                   ^

References:
   new.js:3:17
   3| opaque type T = number;
                      ^^^^^^ [1]
   new.js:6:33
   6| function f<X: number>(x: ?X, t: ?T, s: ?S) {
                                      ^^ [2]


Error ------------------------------------------------------------------------------------------------------ new.js:9:14

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   new.js:9:14
   9|     else if (s) { }
                   ^

References:
   new.js:4:24
   4| declare opaque type S: number;
                             ^^^^^^ [1]
   new.js:6:40
   6| function f<X: number>(x: ?X, t: ?T, s: ?S) {
                                             ^^ [2]


Error ------------------------------------------------------------------------------------------ simple_sketchies.js:5:7

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:5:7
   5|   if (x) {/* sketchy */}
            ^

References:
   simple_sketchies.js:4:16
   4| function f(x: ?number) {
                     ^^^^^^ [1]
   simple_sketchies.js:4:15
   4| function f(x: ?number) {
                    ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:10:7

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:10:7
   10|   if (x) { /* sketchy */ }
             ^

References:
   simple_sketchies.js:9:15
    9| function h(x: number|null) {
                     ^^^^^^ [1]
   simple_sketchies.js:9:22
    9| function h(x: number|null) {
                            ^^^^ [2]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:27:7

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [1]?
[sketchy-null-number]

   simple_sketchies.js:27:7
   27|   if (o.p) {/* sketchy */}
             ^^^

References:
   simple_sketchies.js:26:21
   26| function l(o: { p?: number, ... }) {
                           ^^^^^^ [1]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:32:7

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:32:7
   32|   if (o.p) {/* sketchy */}
             ^^^

References:
   simple_sketchies.js:31:21
   31| function m(o: { p: ?number, ... }) {
                           ^^^^^^ [1]
   simple_sketchies.js:31:20
   31| function m(o: { p: ?number, ... }) {
                          ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:37:7

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:37:7
   37|   if (o.p) { /* sketchy */ }
             ^^^

References:
   simple_sketchies.js:36:20
   36| function n(o: { p: number|null|void, ... }) {
                          ^^^^^^ [1]
   simple_sketchies.js:36:32
   36| function n(o: { p: number|null|void, ... }) {
                                      ^^^^ [2]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:48:7

Sketchy null check on string [1] which is potentially an empty string. Perhaps you meant to check for null or
undefined [2]? [sketchy-null-string]

   simple_sketchies.js:48:7
   48|   if (assignee = x) { /* sketchy */ }
             ^^^^^^^^

References:
   simple_sketchies.js:46:16
   46| function z(x: ?string) {
                      ^^^^^^ [1]
   simple_sketchies.js:46:15
   46| function z(x: ?string) {
                     ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- simple_sketchies.js:53:16

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:53:16
   53| var valToUse = value || defaultVal; /* sketchy */
                      ^^^^^

References:
   simple_sketchies.js:51:13
   51| var value: ?number = 0;
                   ^^^^^^ [1]
   simple_sketchies.js:51:12
   51| var value: ?number = 0;
                  ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- simple_sketchies.js:58:20

Avoid using `&&` to check the value of number [1]. Consider handling falsy values (0 and NaN) by using a conditional to
choose an explicit default instead. [sketchy-number-and]

   simple_sketchies.js:58:20
   58| var sketchyFalse = value && false; /* sketchy */
                          ^^^^^

References:
   simple_sketchies.js:51:13
   51| var value: ?number = 0;
                   ^^^^^^ [1]


Error ---------------------------------------------------------------------------------------- simple_sketchies.js:58:20

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:58:20
   58| var sketchyFalse = value && false; /* sketchy */
                          ^^^^^

References:
   simple_sketchies.js:51:13
   51| var value: ?number = 0;
                   ^^^^^^ [1]
   simple_sketchies.js:51:12
   51| var value: ?number = 0;
                  ^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- simple_sketchies.js:59:19

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:59:19
   59| var sketchyTrue = value || true; /* sketchy */
                         ^^^^^

References:
   simple_sketchies.js:51:13
   51| var value: ?number = 0;
                   ^^^^^^ [1]
   simple_sketchies.js:51:12
   51| var value: ?number = 0;
                  ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:63:5

Avoid using `&&` to check the value of number [1]. Consider handling falsy values (0 and NaN) by using a conditional to
choose an explicit default instead. [sketchy-number-and]

   simple_sketchies.js:63:5
   63| if (is && is.a) { }
           ^^

References:
   simple_sketchies.js:61:39
   61| declare var ww: {is?: ?({a: number} | number)};
                                             ^^^^^^ [1]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:63:5

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:63:5
   63| if (is && is.a) { }
           ^^

References:
   simple_sketchies.js:61:39
   61| declare var ww: {is?: ?({a: number} | number)};
                                             ^^^^^^ [1]
   simple_sketchies.js:61:23
   61| declare var ww: {is?: ?({a: number} | number)};
                             ^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- simple_sketchies.js:63:11

Sketchy null check on number [1] which is potentially 0. Perhaps you meant to check for null or undefined [2]?
[sketchy-null-number]

   simple_sketchies.js:63:11
   63| if (is && is.a) { }
                 ^^^^ [2]

References:
   simple_sketchies.js:61:29
   61| declare var ww: {is?: ?({a: number} | number)};
                                   ^^^^^^ [1]


Error ---------------------------------------------------------------------------------------- simple_sketchies.js:63:11

Sketchy null check on mixed [1] which is potentially false. Perhaps you meant to check for null or undefined [1]?
[sketchy-null-mixed]

   63| if (is && is.a) { }
                 ^^^^ [1]


Error ----------------------------------------------------------------------------------------- simple_sketchies.js:66:5

Sketchy null check on mixed [1] which is potentially false. Perhaps you meant to check for null or undefined [1]?
[sketchy-null-mixed]

   simple_sketchies.js:66:5
   66| if (hh.a && hh.a.b) { }
           ^^^^

References:
   simple_sketchies.js:65:21
   65| declare var hh: {a: mixed};
                           ^^^^^ [1]


Error ---------------------------------------------------------------------------------------- simple_sketchies.js:66:13

Sketchy null check on mixed [1] which is potentially false. Perhaps you meant to check for null or undefined [1]?
[sketchy-null-mixed]

   simple_sketchies.js:66:13
   66| if (hh.a && hh.a.b) { }
                   ^^^^^^

References:
   simple_sketchies.js:65:21
   65| declare var hh: {a: mixed};
                           ^^^^^ [1]



Found 21 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
